--- a/Matrix.html
+++ b/Matrix.html
@@ -64,7 +64,6 @@
 │ 1  2  3 │
 │ 4  5  6 │
 └         ┘
-
 </code></pre>
 			<p>
 				When describing the dimensions of a matrix 
@@ -79,7 +78,6 @@
 │ 3  4 │
 │ 5  6 │
 └      ┘
-
 </code></pre>
 
 			<p>
@@ -98,7 +96,6 @@
 │ 1  3  5 │
 │ 2  4  6 │
 └         ┘
-
 </code></pre>
 			<hr>
 			<h3 id="Constructor">Constructor</h3>
@@ -122,11 +119,8 @@
 			</p>
 <pre><code>
 var a = new Q.Matrix(  
-
 	[ 1, 2, 3 ],  
-	[ 4, 5, 6 ]
-) 
-
+	[ 4, 5, 6 ])
 </code></pre>
 			<h3 id="Import_and_export_formats">Import and export formats</h3>
 			<p>
@@ -142,41 +136,78 @@ var a = new Q.Matrix(
 			</ul>
 			<h3 id="Constants">Constants</h3>
 			<p>
-				The following constant values are attached to <code>Q.Matrix</code>
-				for general convenience
-				<em>and</em> to the <code>Q.Matrix.constants</code> object
-				for lookup convenience in the console
-				or iteration convenience via <code>Object.keys</code>. 
+				While <code>Q.Matrix</code> <a href="#Constants">constants</a>
+				are appended directly to the <code>Q.Matrix</code> object,
+				they are also appended to a <code>Q.Matrix.constants</code> object
+				to make looking up constants in the JavaScript console trivial,
+				and to make iterating across all constants convenient via
+				functions like 
+				<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/entries" target="_blank">Object.entries</a></code>,
+				<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/keys" target="_blank">Object.keys</a></code>,
+				<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/values" target="_blank">Object.values</a></code>,
+				and so on.
 			</p>
+			<ul class="properties">
+				<li>
+					<dt id=".IDENTITY_2X2"><a href="#.IDENTITY_2X2">IDENTITY_2X2</a></dt>
+					<dd><code>= Q.Matrix.<a href="#.createIdentity">createIdentity</a>( 2 )</code></dd>
+				</li>
+				<li>
+					<dt id=".IDENTITY_3X3"><a href="#.IDENTITY_3X3">IDENTITY_3X3</a></dt>
+					<dd><code>= Q.Matrix.<a href="#.createIdentity">createIdentity</a>( 3 )</code></dd>
+				</li>
+				<li>
+					<dt id=".IDENTITY_4X4"><a href="#.IDENTITY_4X4">IDENTITY_4X4</a></dt>
+					<dd><code>= Q.Matrix.<a href="#.createIdentity">createIdentity</a>( 4 )</code></dd>
+				</li>
+				<li>
+					<dt id=".CONSTANT0_2X2"><a href="#.CONSTANT0_2X2">CONSTANT0_2X2</a></dt>
+					<dd>
 <pre><code>
-IDENTITY_2X2 = Q.Matrix.<a href="#.createIdentity">createIdentity</a>( 2 )
-IDENTITY_3X3 = Q.Matrix.<a href="#.createIdentity">createIdentity</a>( 3 )
-IDENTITY_4X4 = Q.Matrix.<a href="#.createIdentity">createIdentity</a>( 4 )
-
-CONSTANT0_2X2 = new Q.Matrix(
-	[ 1, 1 ],
-	[ 0, 0 ])
-
-CONSTANT1_2X2 = new Q.Matrix(
-	[ 0, 0 ],
-	[ 1, 1 ])
-
-NEGATION_2X2 = new Q.Matrix(
-	[ 0, 1 ],
-	[ 1, 0 ])
-
-TEST_MAP_9X9 = new Q.Matrix(
-	[ 11, 21, 31, 41, 51, 61, 71, 81, 91 ],
-	[ 12, 22, 32, 42, 52, 62, 72, 82, 92 ],
-	[ 13, 23, 33, 43, 53, 63, 73, 83, 93 ],
-	[ 14, 24, 34, 44, 54, 64, 74, 84, 94 ],
-	[ 15, 25, 35, 45, 55, 65, 75, 85, 95 ],
-	[ 16, 26, 36, 46, 56, 66, 76, 86, 96 ],
-	[ 17, 27, 37, 47, 57, 67, 77, 87, 97 ],
-	[ 18, 28, 38, 48, 58, 68, 78, 88, 98 ],
-	[ 19, 29, 39, 49, 59, 69, 79, 89, 99 ])
-
+= new Q.Matrix(
+[ 1, 1 ],
+[ 0, 0 ])
 </code></pre>
+					</dd>
+				</li>
+				<li>
+					<dt id=".CONSTANT1_2X2"><a href="#.CONSTANT1_2X2">CONSTANT1_2X2</a></dt>
+					<dd>
+<pre><code>
+= new Q.Matrix(
+[ 0, 0 ],
+[ 1, 1 ])
+</code></pre>
+					</dd>
+				</li>
+				<li>
+					<dt id=".NEGATION_2X2"><a href="#.NEGATION_2X2">NEGATION_2X2</a></dt>
+					<dd>
+<pre><code>
+= new Q.Matrix(
+[ 0, 1 ],
+[ 1, 0 ])
+</code></pre>
+					</dd>
+				</li>
+				<li>
+					<dt id=".TEST_MAP_9X9"><a href="#.TEST_MAP_9X9">TEST_MAP_9X9</a></dt>
+					<dd>
+<pre><code>
+= new Q.Matrix(
+[ 11, 21, 31, 41, 51, 61, 71, 81, 91 ],
+[ 12, 22, 32, 42, 52, 62, 72, 82, 92 ],
+[ 13, 23, 33, 43, 53, 63, 73, 83, 93 ],
+[ 14, 24, 34, 44, 54, 64, 74, 84, 94 ],
+[ 15, 25, 35, 45, 55, 65, 75, 85, 95 ],
+[ 16, 26, 36, 46, 56, 66, 76, 86, 96 ],
+[ 17, 27, 37, 47, 57, 67, 77, 87, 97 ],
+[ 18, 28, 38, 48, 58, 68, 78, 88, 98 ],
+[ 19, 29, 39, 49, 59, 69, 79, 89, 99 ])
+</code></pre>
+					</dd>
+				</li>
+			</ul>
 			<hr>
 			<h3 id="Class_properties">Class properties</h3>
 			<ul class="properties">
@@ -328,7 +359,7 @@ TEST_MAP_9X9 = new Q.Matrix(
 					<dd> Description TK</dd>
 				</li>
 			</ul>
-			<h4>Data exports (non-destructive by nature)</h4>
+			<h4>Data exports methods (non-destructive by nature)</h4>
 			<ul class="properties">
 				<li>
 					<dt id=".protoptype.read"><a href="#.protoptype.read">read</a></dt>
@@ -359,7 +390,7 @@ TEST_MAP_9X9 = new Q.Matrix(
 					<dd>Description TK</dd>
 				</li>
 			</ul>
-			<h4>Data imports (destructive)</h4>
+			<h4>Data import methods (destructive)</h4>
 			<ul class="properties">
 				<li>
 					<dt id=".protoptype.write$"><a href="#.protoptype.write$">write$</a></dt>
@@ -447,14 +478,14 @@ var a = new Q.Matrix(
 var matrixA = new Q.Matrix(
 	[ 1, 2 ],
 	[ 3, 4 ])
-console.log( 'Matrix A =', matrixA.toTSV(), '\n\n' )
+console.log( 'Matrix A =', matrixA.toTsv(), '\n\n' )
 
 var matrixB = new Q.Matrix(
 	[ 0, 5 ],
 	[ 6, 7 ])
-console.log( 'Matrix B =', matrixB.toTSV(), '\n\n' )
+console.log( 'Matrix B =', matrixB.toTsv(), '\n\n' )
 
-console.log( 'Matrix A ⊗ Matrix B =', matrixA.multiplyTensor( matrixB ).toTSV(), '\n\n' )
+console.log( 'Matrix A ⊗ Matrix B =', matrixA.multiplyTensor( matrixB ).toTsv(), '\n\n' )
 
 
 
@@ -472,7 +503,7 @@ console.log( 'Q.Matrix.IDENTITY_4X4', Q.Matrix.IDENTITY_4X4 )
 console.log( 'Q.Matrix.CNOT', Q.Matrix.CNOT )
 console.log( '\nQ.Matrix.CNOT.toHtml()', Q.Matrix.CNOT.toHTML(), '\n\n' )
 console.log( '\nQ.Matrix.TEST_MAP_9X9.toCSV()', Q.Matrix.TEST_MAP_9X9.toCSV(), '\n\n' )
-console.log( '\nQ.Matrix.TEST_MAP_9X9.toTSV()', Q.Matrix.TEST_MAP_9X9.toTSV(), '\n\n' )
+console.log( '\nQ.Matrix.TEST_MAP_9X9.toTsv()', Q.Matrix.TEST_MAP_9X9.toTsv(), '\n\n' )
 
 
 console.log( 'How many matrices have we created?', Q.Matrix.index )
@@ -490,7 +521,7 @@ var b = new Q.Matrix(
 	[ 3 ],
 	[ 3 ])
 
-console.log( 'a.multiply( b ).toTSV()', a.multiply( b ).toTSV() )
+console.log( 'a.multiply( b ).toTsv()', a.multiply( b ).toTsv() )
 
 
 
@@ -505,7 +536,7 @@ var d = new Q.Matrix(
 	[ 2 ],
 	[ 3 ])
 
-console.log( 'c.multiply( d ).toTSV()', c.multiply( d ).toTSV() )
+console.log( 'c.multiply( d ).toTsv()', c.multiply( d ).toTsv() )
 
 
 
@@ -517,7 +548,7 @@ var f = new Q.Matrix(
 	[ 1, 2 ],
 	[ 3, 4 ])
 
-console.log( 'e.multiply( df ).toTSV()', e.multiply( f ).toTSV() )
+console.log( 'e.multiply( df ).toTsv()', e.multiply( f ).toTsv() )
 
 
 
@@ -534,8 +565,8 @@ var threes = new Q.Matrix(
 	[ 3, 3, 3 ])
 
 
-console.log( 'Q.Matrix.IDENTITY_2X2.multiply( e ).toTSV()', Q.Matrix.IDENTITY_2X2.multiply( e ))
-console.log( 'Q.Matrix.IDENTITY_3X3.multiply( c ).toTSV()', Q.Matrix.IDENTITY_3X3.multiply( c ))
+console.log( 'Q.Matrix.IDENTITY_2X2.multiply( e ).toTsv()', Q.Matrix.IDENTITY_2X2.multiply( e ))
+console.log( 'Q.Matrix.IDENTITY_3X3.multiply( c ).toTsv()', Q.Matrix.IDENTITY_3X3.multiply( c ))
 */
 
 
@@ -560,17 +591,17 @@ var b = new Q.Matrix(
 
 //  Import and export formats.
 
-var csv = Q.Matrix.fromCSV(`
+var csv = Q.Matrix.fromCsv(`
 	1, 2, 3
 	4, 5, 6
 	7, 8, 9`)
-console.log( 'Matrix from CSV', csv.toTSV(), '\n\n' )
+console.log( 'Matrix from CSV', csv.toTsv(), '\n\n' )
 
 
-var tsv = Q.Matrix.fromTSV(`1	2	3
+var tsv = Q.Matrix.fromTsv(`1	2	3
 4	5	6
 7	8	9`)
-console.log( 'Matrix from TSV', tsv.toTSV(), '\n\n' )
+console.log( 'Matrix from TSV', tsv.toTsv(), '\n\n' )
 
 
 const html = `
@@ -592,7 +623,7 @@ const html = `
 	</tr>
 </table> `
 
-console.log( 'Matrix from HTML', Q.Matrix.fromHTML( html ).toTSV(), '\n\n' )
+console.log( 'Matrix from HTML', Q.Matrix.fromHtml( html ).toTsv(), '\n\n' )
 
 
 
